[gd_scene load_steps=3 format=3 uid="uid://ciks3yxd3yssl"]

[ext_resource type="Script" uid="uid://cqf6ib1yh801x" path="res://scripts/combat/construct_enemy.gd" id="1_mibgn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mibgn"]
radius = 30.0

[node name="ConstructEnemy" type="ColorRect"]
script = ExtResource("1_mibgn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mibgn")
one_way_collision_margin = 0.0

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="StatusEffects" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
